--- a/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction.yaml
@@ -1,8 +1,9 @@
 ---
-- name: Main Playbook for extracting CoT from a list of papers
+- name: Main Playbook for extracting CoT from papers in SQLite database
   hosts: localhost
   vars:
-    url_list: ""
+    database: "{{ lookup('env', 'PWD') }}/papers.db"
+    limit: 1
     training_file: "{{ lookup('env', 'PWD') }}/results/raspberry-training_data.jsonl"
     inference_results_directory: "{{ lookup('env', 'PWD') }}/results/raspberry-inference-results"
     template: "raspberry-extract-cot.md"
@@ -13,41 +14,25 @@
     # extraction_preset: "llama-3.2-90b"
   tasks:
 
-    - name: Check required variables
-      assert:
-        that:
-          - url_list | length > 0
-        fail_msg: 'You must define url_list.'
-
     - name: "Ensure inference results directory exists: {{ inference_results_directory }}"
       ansible.builtin.file:
         path: "{{ inference_results_directory }}"
         state: directory
         mode: '0755'
 
-    - name: "Download URL list file: {{ url_list }}"
-      ansible.builtin.get_url:
-        url: "{{ url_list }}"
-        dest: "/tmp/url_list.txt"
-        mode: '0644'
+    - name: "Fetch papers from SQLite database, limit: {{ limit }}"
+      lwe_sqlite_query:
+        db: "{{ database }}"
+        query: "SELECT id, paper_url FROM papers WHERE processing_status = 'ready' ORDER BY id LIMIT ?"
+        query_params:
+          - "{{ limit }}"
+      register: paper_results
 
-    - name: "Read URL list file: {{ url_list }}"
-      ansible.builtin.slurp:
-        src: "/tmp/url_list.txt"
-      register: url_list_content
-
-    - name: "Convert URL list content to string: {{ url_list }}"
-      ansible.builtin.set_fact:
-        url_list_string: "{{ url_list_content['content'] | b64decode }}"
-
-    - name: Create list of URLs
-      ansible.builtin.set_fact:
-        urls: "{{ url_list_string | trim | split('\n') }}"
-
-    - name: Process each URL
+    - name: Process each paper
       ansible.builtin.include_tasks: raspberry-paper-to-cot-extraction-extract.yaml
-      loop: "{{ urls }}"
+      loop: "{{ paper_results.data }}"
       loop_control:
-        loop_var: url
+        loop_var: paper
       vars:
-        current_url: "{{ url }}"
+        current_url: "{{ paper.paper_url }}"
+        paper_id: "{{ paper.id }}"
