--- a/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction-extract.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction-extract.yaml
@@ -22,7 +22,7 @@
         preset: "{{ extraction_preset }}"
         template: "{{ template }}"
         template_vars:
-          content: "{{ extracted_text.content }}"
+          paper: "{{ extracted_text.content }}"
       register: lwe_results
       until: lwe_results is succeeded
       retries: 3
@@ -32,10 +32,12 @@
       ansible.builtin.command:
         cmd: >-
           {{ processing_script }}
-          {{ training_file | quote }}
-          {{ inference_results_directory | quote }}
+          {{ database | quote }}
+          {{ paper_id | quote }}
           {{ current_url | quote }}
           {{ lwe_results.response | quote }}
+          {{ training_file | quote }}
+          {{ inference_results_directory | quote }}
       register: script_output
 
     - name: "Output script execution results: {{ processing_script }}"
@@ -43,22 +45,10 @@
         msg: "{{ script_output.stdout }}"
 
   rescue:
-    - name: "Set processing status to 'failed' if download fails"
+    - name: "Set processing status to 'failed' if any step fails"
       lwe_sqlite_query:
         db: "{{ database }}"
         query: "UPDATE papers SET processing_status = 'failed' WHERE id = ?"
         query_params:
           - "{{ paper_id }}"
 
-  always:
-    - name: Update processing status for processed paper
-      lwe_sqlite_query:
-        db: "{{ database }}"
-        query: "UPDATE papers SET processing_status = 'processed' WHERE id = ?"
-        query_params:
-          - "{{ paper_id }}"
-      when:
-        - download_result is succeeded
-        - extracted_text is succeeded
-        - lwe_results is succeeded
-        - script_output is succeeded
