add preset options to workflows, include preset used in inference artifact

--- a/lwe/config/profiles/default/workflows/raspberry-paper-rubric-grader-grade.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-rubric-grader-grade.yaml
@@ -32,6 +32,7 @@
       ansible.builtin.command:
         cmd: >-
           {{ processing_script }}
+          {{ grading_preset | quote }}
           {{ database | quote }}
           {{ paper_id | quote }}
           {{ current_url | quote }}
