--- a/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction-extract.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction-extract.yaml
@@ -32,6 +32,7 @@
       ansible.builtin.command:
         cmd: >-
           {{ processing_script }}
+          {{ extraction_preset | quote }}
           {{ database | quote }}
           {{ paper_id | quote }}
           {{ current_url | quote }}
