--- a/lwe/config/profiles/default/workflows/raspberry-paper-profiler.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-profiler.yaml
@@ -9,6 +9,7 @@
     # profiler_preset: "gemini-1.5-pro-002"
     template: "raspberry-paper-profiler.md"
     database: "{{ lookup('env', 'PWD') }}/papers.db"
+    order_by: "RANDOM()"
     limit: 1
     inference_results_directory: "{{ lookup('env', 'PWD') }}/results/inference"
     profiler_script: "{{ lookup('env', 'PWD') }}/scripts/raspberry-paper-profiler.py"
@@ -25,7 +26,7 @@
     - name: "Fetch papers from SQLite database, limit: {{ limit }}"
       lwe_sqlite_query:
         db: "{{ database }}"
-        query: "SELECT id, paper_url FROM papers WHERE processing_status = 'ready_to_profile' ORDER BY id LIMIT ?"
+        query: "SELECT id, paper_url FROM papers WHERE processing_status = 'ready_to_profile' ORDER BY {{ order_by }} LIMIT ?"
         query_params:
           - "{{ limit }}"
       register: paper_results
