add claude-sonnet-openrouter preset

--- a/lwe/config/profiles/default/workflows/raspberry-paper-profiler.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-profiler.yaml
@@ -3,6 +3,7 @@
   hosts: localhost
   vars:
     profiler_preset: "claude-sonnet"
+    # profiler_preset: "claude-sonnet-openrouter"
     # profiler_preset: "claude-opus"
     # profiler_preset: "llama-3.2-90b"
     # profiler_preset: "llama-3.1-405b"
