add sonnet 3.5 openrouter preset

--- a/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction.yaml
+++ b/lwe/config/profiles/default/workflows/raspberry-paper-to-cot-extraction.yaml
@@ -3,6 +3,7 @@
   hosts: localhost
   vars:
     extraction_preset: "claude-sonnet"
+    # extraction_preset: "claude-sonnet-openrouter"
     # extraction_preset: "claude-opus"
     # extraction_preset: "llama-3.2-90b"
     # extraction_preset: "llama-3.1-405b"
