lay out main pipeline helper script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ description = "A pipeline for processing research papers"
 requires-python = ">=3.7"
 
 [project.scripts]
-raspberry-paper-profiler = "raspberry_paper_to_cot_pipeline.paper_profiler:main"
 raspberry-fetch-paper-urls = "raspberry_paper_to_cot_pipeline.fetch_paper_urls:main"
 raspberry-fetch-arxiv-paper-urls-by-category = "raspberry_paper_to_cot_pipeline.fetch_arxiv_paper_urls_by_category:main"
 raspberry-clean-paper-urls = "raspberry_paper_to_cot_pipeline.clean_paper_urls:main"
+raspberry-paper-profiler = "raspberry_paper_to_cot_pipeline.paper_profiler:main"
 raspberry-paper-scorer = "raspberry_paper_to_cot_pipeline.paper_scorer:main"
 raspberry-paper-extract-cot = "raspberry_paper_to_cot_pipeline.paper_extract_cot:main"
+raspberry-paper-cot-pipeline = "raspberry_paper_to_cot_pipeline.paper_cot_pipeline:main"
 
 [tool.setuptools.packages.find]
 include = ["raspberry_paper_to_cot_pipeline*"]
