--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,10 @@ raspberry-fetch-paper-urls = "raspberry_paper_to_cot_pipeline.fetch_paper_urls:m
 raspberry-fetch-arxiv-paper-urls-by-category = "raspberry_paper_to_cot_pipeline.fetch_arxiv_paper_urls_by_category:main"
 raspberry-clean-paper-urls = "raspberry_paper_to_cot_pipeline.clean_paper_urls:main"
 raspberry-paper-profiler = "raspberry_paper_to_cot_pipeline.paper_profiler:main"
-raspberry-paper-scorer = "raspberry_paper_to_cot_pipeline.paper_scorer:main"
+raspberry-paper-profile-scorer = "raspberry_paper_to_cot_pipeline.paper_profile_scorer:main"
 raspberry-paper-extract-cot = "raspberry_paper_to_cot_pipeline.paper_extract_cot:main"
+raspberry-cot-verifier = "raspberry_paper_to_cot_pipeline.cot_verifier:main"
+raspberry-cot-verification-scorer = "raspberry_paper_to_cot_pipeline.cot_verification_scorer:main"
 raspberry-paper-cot-pipeline = "raspberry_paper_to_cot_pipeline.paper_cot_pipeline:main"
 
 [tool.setuptools.packages.find]
