--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ raspberry-fetch-arxiv-paper-urls-by-category = "raspberry_paper_to_cot_pipeline.
 raspberry-clean-paper-urls = "raspberry_paper_to_cot_pipeline.clean_paper_urls:main"
 raspberry-paper-profiler = "raspberry_paper_to_cot_pipeline.paper_profiler:main"
 raspberry-paper-profile-scorer = "raspberry_paper_to_cot_pipeline.paper_profile_scorer:main"
-raspberry-paper-extract-cot = "raspberry_paper_to_cot_pipeline.paper_extract_cot:main"
-raspberry-cot-verifier = "raspberry_paper_to_cot_pipeline.cot_verifier:main"
-raspberry-cot-verification-scorer = "raspberry_paper_to_cot_pipeline.cot_verification_scorer:main"
+raspberry-paper-cot-extractor = "raspberry_paper_to_cot_pipeline.paper_cot_extractor:main"
+raspberry-cot-quality-assessor = "raspberry_paper_to_cot_pipeline.cot_quality_assessor:main"
+raspberry-cot-quality-scorer = "raspberry_paper_to_cot_pipeline.cot_quality_scorer:main"
 raspberry-paper-cot-pipeline = "raspberry_paper_to_cot_pipeline.paper_cot_pipeline:main"
 
 [tool.setuptools.packages.find]
