disable unneeded plugins for now

--- a/lwe/config/profiles/default/config.yaml
+++ b/lwe/config/profiles/default/config.yaml
@@ -15,13 +15,13 @@ log:
     level: error
 plugins:
   enabled:
-    - gist
-    - shell
+    # - gist
+    # - shell
     - provider_chat_anthropic
-    - provider_chat_fireworks
-    - provider_chat_google_genai
+    # - provider_chat_fireworks
+    # - provider_chat_google_genai
     # - provider_chat_groq
-    - provider_openrouter
+    # - provider_openrouter
   gist:
     include_raw_link: true
     exclude_system_messages: true
