log inference input/output to log file

--- a/lwe/config/profiles/default/config.yaml
+++ b/lwe/config/profiles/default/config.yaml
@@ -6,7 +6,8 @@ chat:
     # Provide as CLI arg, /dev/null is used here to prevent.
     # the file from being written if it's turned on in a
     # default Config().
-    filepath: /dev/null
+    # filepath: /dev/null
+    filepath: /tmp/raspberry-chat.log
 debug:
   log:
     enabled: true
