fix generation of training data, output human readable markdown for training data

--- a/sample.env
+++ b/sample.env
@@ -64,5 +64,6 @@
 # Training Data Configuration
 # Settings for final training data generation
 #------------------------------------------------------------------------------
-# RASPBERRY_CONSOLIDATED_TRAINING_FILENAME=consolidated-training-data.jsonl
+# RASPBERRY_JSONL_TRAINING_FILENAME=consolidated-training-data.jsonl
+# RASPBERRY_HUMAN_READABLE_TRAINING_FILENAME=training-data-human-readable.md
 # RASPBERRY_TRAINING_SYSTEM_MESSAGE="You are a thinking agent responsible for developing a detailed, step-by-step thought process in response to a request, problem, or conversation. Your task is to break down the situation into a structured reasoning process. If feedback is provided, integrate it into your thought process for refinement."
