--- a/sample.env
+++ b/sample.env
@@ -65,5 +65,5 @@
 # Settings for final training data generation
 #------------------------------------------------------------------------------
 # RASPBERRY_JSONL_TRAINING_FILENAME=consolidated-training-data.jsonl
-# RASPBERRY_HUMAN_READABLE_TRAINING_FILENAME=training-data-human-readable.md
+# RASPBERRY_HUMAN_READABLE_TRAINING_STUB=training-data-human-readable
 # RASPBERRY_TRAINING_SYSTEM_MESSAGE="You are a thinking agent responsible for developing a detailed, step-by-step thought process in response to a request, problem, or conversation. Your task is to break down the situation into a structured reasoning process. If feedback is provided, integrate it into your thought process for refinement."
