add comments for presets

--- a/sample.env
+++ b/sample.env
@@ -6,7 +6,18 @@
 # LWE Model Preset Configurations
 # Controls which LLM models are used for different pipeline stages
 #------------------------------------------------------------------------------
+#
+# These presets are available in the standard configuration
+# Some will require installing additional provider plugins, see the README for
+# details
+#  - claude-sonnet
+#  - gpt-4o
+#  - gemini-1.5-pro-002
+#  - llama-3.1-405b
+#
+# The default preset is used for any stage where a preset is not specified
 # RASPBERRY_DEFAULT_LWE_PRESET=claude-sonnet
+# Presets for a specific stage can be overridden
 # RASPBERRY_PAPER_PROFILER_PRESET=claude-sonnet
 # RASPBERRY_COT_EXTRACTION_PRESET=claude-sonnet
 # RASPBERRY_COT_CRITIQUE_PRESET=claude-sonnet
