add timeout context manager, implement timeout/SIGINT support for PDF to markdown extraction

--- a/sample.env
+++ b/sample.env
@@ -54,6 +54,11 @@
 # RASPBERRY_DATABASE_PATH=./papers.db
 
 #------------------------------------------------------------------------------
+# Util settings.
+#------------------------------------------------------------------------------
+# RASPBERRY_UTIL_PDF_TO_MARKDOWN_TIMEOUT_SECONDS=300
+
+#------------------------------------------------------------------------------
 # ArXiv Paper Fetch Settings
 # Controls paper fetching behavior and limits
 #------------------------------------------------------------------------------
