--- a/sample.env
+++ b/sample.env
@@ -82,4 +82,16 @@
 #------------------------------------------------------------------------------
 # RASPBERRY_JSONL_TRAINING_FILENAME=consolidated-training-data.jsonl
 # RASPBERRY_HUMAN_READABLE_TRAINING_STUB=training-data-human-readable
+# RASPBERRY_TRAINING_FILE=training.jsonl
+# RASPBERRY_VALIDATION_FILE=validation.jsonl
 # RASPBERRY_TRAINING_SYSTEM_MESSAGE="You are a thinking agent responsible for developing a detailed, step-by-step thought process in response to a request, problem, or conversation. Your task is to break down the situation into a structured reasoning process. If feedback is provided, integrate it into your thought process for refinement."
+
+#------------------------------------------------------------------------------
+# OpenAI Fine-tuning Configuration
+# Settings for OpenAI model fine-tuning process
+#------------------------------------------------------------------------------
+# RASPBERRY_OPENAI_PLATFORM_BASE_URL=https://platform.openai.com
+# RASPBERRY_OPENAI_FINE_TUNING_MODEL=gpt-4o-mini-2024-07-18
+# RASPBERRY_OPENAI_FINE_TUNING_BATCH_SIZE=4
+# RASPBERRY_OPENAI_FINE_TUNING_LEARNING_RATE_MULTIPLIER=0.05
+# RASPBERRY_OPENAI_FINE_TUNING_N_EPOCHS=3
